Arthur Bazhanov Fix scroll jump #70 (#75)
* Added mobile version to HR APP

* #31 Create candidates  profle page except experience part

* Change for pull

* Created interview

* Created interview page and modal window and fixed conflict sql script

* Added bracket in 897 line

* Added #navMenu in profile.js  and changed z-index in navigation.css

* Change modal window for adding event #59

* fix sckroll jump

--- a/views/assets/css/candidates.css
+++ b/views/assets/css/candidates.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .content-candidates-section {
   min-height: 70px;
 }
